--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "firebase": "^11.6.0",
+    "material-icons": "^1.13.14",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
